[gd_scene load_steps=15 format=2]

[ext_resource path="res://characters/IcySkin_inherited.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/PlayerEntity.gd" type="Script" id=2]
[ext_resource path="res://characters/StateMachines/MovementController/Fall.gd" type="Script" id=3]
[ext_resource path="res://characters/StateMachines/MovementController/Jump.gd" type="Script" id=4]
[ext_resource path="res://characters/StateMachines/MovementController/Move.gd" type="Script" id=5]
[ext_resource path="res://scenes/default_env.tres" type="Environment" id=6]
[ext_resource path="res://addons/jm_pp_outlines/jm_pp_outlines_camera.gd" type="Script" id=7]
[ext_resource path="res://state_machine/StateMachine.gd" type="Script" id=8]
[ext_resource path="res://characters/StateMachines/MovementController/Idle.gd" type="Script" id=9]
[ext_resource path="res://characters/StateMachines/AimingController/Aim.gd" type="Script" id=10]
[ext_resource path="res://characters/StateMachines/MovementController/Run.gd" type="Script" id=11]
[ext_resource path="res://characters/StateMachines/AimingController/Fire.gd" type="Script" id=12]
[ext_resource path="res://characters/StateMachines/AimingController/Rest.gd" type="Script" id=13]

[sub_resource type="CapsuleShape" id=1]
radius = 0.824618
height = 0.875165

[node name="PlayerEntity" type="KinematicBody"]
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.26502, 0 )
shape = SubResource( 1 )

[node name="ThirdPersonCamera" type="Camera" parent="."]
transform = Transform( -1, 7.54979e-08, -1.30766e-07, 0, 0.866025, 0.5, 1.50996e-07, 0.5, -0.866025, -2.24466e-06, 23.1469, -35.6759 )
environment = ExtResource( 6 )
current = true
fov = 30.9
script = ExtResource( 7 )
__meta__ = {
"_editor_description_": ""
}
color_outline_scale = 3.0
depth_outline_scale = 3.0
depth_threshold = 2.65
edge_threshold = 0.269
max_edge_alpha = 1.0
edge_color = Color( 0.14902, 0.0196078, 0.105882, 1 )
color_use_laplace = true

[node name="IcySkin" parent="." instance=ExtResource( 1 )]

[node name="MovementController" type="Node" parent="."]
script = ExtResource( 8 )
initial_state = NodePath("Move/Idle")

[node name="Move" type="Node" parent="MovementController"]
script = ExtResource( 5 )

[node name="Idle" type="Node" parent="MovementController/Move"]
script = ExtResource( 9 )

[node name="Run" type="Node" parent="MovementController/Move"]
script = ExtResource( 11 )

[node name="Jump" type="Node" parent="MovementController/Move"]
script = ExtResource( 4 )

[node name="Fall" type="Node" parent="MovementController/Move"]
script = ExtResource( 3 )

[node name="AimingController" type="Node" parent="."]
script = ExtResource( 8 )
initial_state = NodePath("Rest")

[node name="Aim" type="Node" parent="AimingController"]
script = ExtResource( 10 )

[node name="Fire" type="Node" parent="AimingController"]
script = ExtResource( 12 )

[node name="Rest" type="Node" parent="AimingController"]
script = ExtResource( 13 )

[editable path="IcySkin"]
